--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -7,25 +7,28 @@
 <br>
 <div class="movie-page">
     <br>
-    <h1>Welcome, {{this.user.Username}}</h1>
-
+    <h1 class="welcome">Welcome, {{this.user.Username}}</h1>
+    <br>
     <div style="display: flex;">
         <mat-card *ngFor="let movie of movies;" style="flex: 1 1 auto;">
             <mat-card-header>
                 <mat-card-title>{{movie.Title}}</mat-card-title>
                 <mat-card-subtitle>Directed by: {{movie.Director.Name}}</mat-card-subtitle>
             </mat-card-header>
-            <img src={{movie.ImagePath}} alt={{movie.Title}} width="300" height="350" />
-            <mat-card-actions>
+            <img src={{movie.ImagePath}} alt={{movie.Title}} width="250" height="300" />
+            <mat-card-actions class="button">
                 <button class="genre" mat-stroked-button
                     (click)="openGenreDialog(movie.Genre.Name, movie.Genre.Description)" color="primary">Genre</button>
                 <button class="director" mat-stroked-button
                     (click)="openDirectorDialog(movie.Director.Name, movie.Director.Bio, movie.Director.Birth, movie.Director.Death)"
                     color="primary">Director</button>
-                <button class="description" mat-stroked-button
-                    (click)="openDescriptionDialog(movie.Title, movie.Description)" color="primary">Synopsis</button>
-                <mat-icon>
-                    favorite_border
+                <button class="description" mat-stroked-button (click)="openSynopsis(movie.Title, movie.Description)"
+                    color="primary">Synopsis</button>
+                <mat-icon class="fav-icon" *ngIf="favCheck(movie._id)" (click)="toggleFavs(movie._id)" color="primary">
+                    favourite
+                </mat-icon>
+                <mat-icon class="fav-icon" *ngIf="!favCheck(movie._id)" (click)="toggleFavs(movie._id)" color="primary">
+                    favourite_border
                 </mat-icon>
             </mat-card-actions>
         </mat-card>
