--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,9 +1,17 @@
-<header class="button">
+<app-nav-bar></app-nav-bar>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<!-- <header class="button">
     <br>
     <button (click)="backToMovies()" mat-stroked-button color="primary">Back</button>
     <div class="divider"> </div>
     <button (click)="logOut()" mat-stroked-button color="primary">Log out</button>
-</header>
+</header> -->
 
 <div class="profile-page">
     <br>
