--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,13 +1,19 @@
+<app-nav-bar></app-nav-bar>
 <header class="button">
     <br>
-    <button (click)="openProfile()" mat-stroked-button color="primary">Profile</button>
+    <br>
+    <!-- <button (click)="openProfile()" mat-stroked-button color="primary">Profile</button>
     <div class="divider"> </div>
-    <button (click)="logOut()" mat-stroked-button color="primary">Log out</button>
+    <button (click)="logOut()" mat-stroked-button color="primary">Log out</button> -->
 </header>
+<br>
+<br>
+<br>
+<br>
 <br>
 <div class="movie-page">
     <br>
-    <h1 class="welcome">Welcome, {{this.user.Username}}</h1>
+    <!-- <h1 class="welcome">Welcome, {{this.user.Username}}</h1> -->
     <br>
     <div style="display: flex;">
         <mat-card *ngFor="let movie of movies;" style="flex: 1 1 auto;">
@@ -24,12 +30,12 @@
                     color="primary">Director</button>
                 <button class="description" mat-stroked-button (click)="openSynopsis(movie.Title, movie.Description)"
                     color="primary">Synopsis</button>
-                <mat-icon class="fav-icon" *ngIf="favCheck(movie._id)" (click)="toggleFavs(movie._id)" color="primary">
+                <!-- <mat-icon class="fav-icon" *ngIf="favCheck(movie._id)" (click)="toggleFavs(movie._id)" color="primary">
                     favourite
                 </mat-icon>
                 <mat-icon class="fav-icon" *ngIf="!favCheck(movie._id)" (click)="toggleFavs(movie._id)" color="primary">
                     favourite_border
-                </mat-icon>
+                </mat-icon> -->
             </mat-card-actions>
         </mat-card>
     </div>
